--- a/fastapi/compose.dev.yaml
+++ b/fastapi/compose.dev.yaml
@@ -8,7 +8,7 @@ services:
     command: fastapi dev main.py --host 0.0.0.0 --port 8080
 
   mongodb:
-    image: mongo:latest
+    image: mongo:4.4.6
     ports:
       - "27017:27017"
     environment:
