--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-document-picker": "~12.0.2",
     "expo-image-picker": "~15.0.7",
@@ -21,10 +22,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
